[tool.poetry]
name = "fanan"
version = "0.0.0"
description = ""
authors = ["Amr Kayid <amrmkayid@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
ruff = "0.4.2"
jax = "0.4.26"
jaxlib = "0.4.26"
ray = {version = "2.20.0", extras = ["default", "data"]}
flax = "0.8.3"
optax = "0.2.2"
orbax = "0.1.9"
einops = "0.8.0"
transformers = "4.40.1"
datasets = "2.19.0"
tokenizers = "0.19.1"
tqdm = "4.66.4"
rich = "13.7.1"
pydantic = "2.7.1"
jmp = "0.0.4"
jaxtyping = "0.2.28"
pre-commit = "3.7.0"
ipdb = "0.13.13"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.poetry.scripts]
fanan = 'fanan.fanan:main'
