[tool.poetry]
name = "fanan"
version = "0.0.0"
description = ""
authors = ["Amr Kayid <amrmkayid@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
jax = "0.4.28"
jaxlib = "0.4.28"
ray = {version = "2.20.0", extras = ["default", "data"]}
flax = "0.8.3"
optax = "0.2.2"
orbax = "0.1.9"
einops = "0.8.0"
transformers = "4.40.1"
datasets = "2.19.0"
tokenizers = "0.19.1"
tqdm = "4.66.4"
rich = "13.7.1"
pydantic = "2.7.1"
jmp = "0.0.4"
jaxtyping = "0.2.28"
beartype = "0.18.5"
tensorflow = "2.16.1"
tensorflow-datasets = "4.9.4"
pillow = "10.3.0"
wandb = "0.17.0"
ml-collections = "0.1.1"



[[tool.poetry.source]]
name = "jax_tpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
priority = "supplemental"

[tool.poetry.group.tpu]
optional = true

[tool.poetry.group.tpu.dependencies]
libtpu-nightly = { version="0.1.dev20240521", source="jax_tpu" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "0.4.2"
pre-commit = "3.7.0"
ipdb = "0.13.13"
coverage = "7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "F722" # forward-annotation-syntax-error (F722)
]


[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.poetry.scripts]
fanan = 'fanan.fanan:main'
